# synthi-ide

./: package-lock.json
synthi/: package-lock.json  package.json
synthi/prisma/: schema.prisma
synthi/prisma/migrations/20251008124216_dsadsa/: migration.sql
synthi/prisma/migrations/20251008124639_test/: migration.sql
synthi/prisma/migrations/20251010143741_add_workspaces_support_in_db/: migration.sql
synthi/prisma/migrations/20251010150613_add_name_field_to_workspace_item/: migration.sql
synthi/prisma/migrations/20251011111949_add_is_folder_property_to_workspace_item/: migration.sql
synthi/prisma/migrations/20251012121413_remove_workspace_item_model/: migration.sql
synthi/src/app/: ReduxProvider.jsx  SessionProvider.jsx  auth.js  globals.css  layout.js  page.js
synthi/src/app/api/bucket/: route.js
synthi/src/app/api/delete/: route.js
synthi/src/app/login/: page.js  page.jsx
synthi/src/app/workspace/: TerminalManager.jsx  TerminalPane.jsx  TopNav.jsx  page.js
synthi/src/components/ui/: button.jsx  popover.jsx  resizable.jsx
synthi/src/hooks/: useWorkspace.js
synthi/src/redux/: hooks.js  store.js  uiSlice.js  workspaceSlice.js
synthi/src/routes/: index.tsx
synthi/src/services/: api.js
synthi/src/utils/: fileIcons.js  fileUtils.js
test-terminal-connection/web-term/: .env  Cargo.toml  temp_credentials_21320.json
test-terminal-connection/web-term/cmgnslm7q0001u9bwhb4mdvfi/testFolder/testFolderInsideFolder/: testfileinsidefolderofofodler.txt
test-terminal-connection/web-term/src/: download.rs  handle_connection.rs  main.rs
(+19 files in other folders)
